--- a/templates/base.html
+++ b/templates/base.html
@@ -1,64 +1,37 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Base</title>
+    <title>TODO APP</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Style -->
     <style>
-      h1 {
-            margin: 5px;
-            text-align: center;
-            padding: 5px;
-        }
-    
-        h2 {
-            text-align: center;
-            text-decoration: underline;
-        }
-    
-        div.done {
-            color: green;
-            font-weight: bold;
-        }
-    
-        div.open {
-            color: red;
-            font-weight: bold;
-        }
-    
-        div.todo {
-            display: block;
-            background: white;
-            border: 2px solid white;
+        div.jumbotron {
+            background-image: url("todo.png");
+            background-repeat: no-repeat;
+            background-color: transparent;
+            background-position: 0% 50%;
+            color: rgb(8, 6, 7);
+            border: 5px groove rgb(16, 214, 16);
             border-radius: 10px;
-            margin: 5px;
+            margin: 0px auto;
+            
+            height: 170px;
+            justify-content:center;
+        }
+        div.h1 {
             text-align: center;
         }
-    
-        div.todo p {
-            font-size: 20px;
-            font-weight: bold;
-            text-decoration: underline;
-        }
-    
-        div.todo div.description {
-            padding: 10px;
-        }
-    
-        div.container {
-            background: greenyellow;
-            display: flex;
-            flex-direction: column;
-            margin: 0 auto;
-            padding: 10px;
-        }
+
     </style>
   </head>
   <body>
+      
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -66,32 +39,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <!-- My Body -->
-    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #0aa2e9;">
-        <a class="navbar-brand" href="#">Remainder {{ todos.due_date }}</a>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-            aria-expanded="false" aria-label="Toggle navigation"></button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownId">
-                        <a class="dropdown-item" href="#">Action 1</a>
-                        <a class="dropdown-item" href="#">Action 2</a>
-                    </div>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
-
+    <div class="jumbotron text-center">
+        <h1>Don't forget TODO it!</h1>
+        <p>Your remainder application</p>
+    </div>
   </body>
 </html>
