base and index templates, index view and todo urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>
-      TODO APP
-      {% block title %}
-      {% endblock %}
-    </title>
+    <title>{% block title %}Title{% endblock %}</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,56 +11,71 @@
 
     <!-- Style -->
     <style>
-        div.jumbotron {
-            background-image: url("./todo.png");
-            background-repeat: no-repeat;
-            background-color: transparent;
-            background-position: 50% 50%;
-            border:none;
-            border-radius:none;
-            margin: 40px;
-            padding: 5px;
-            height:150px;
-            width: auto;
-            justify-content:center;
-        }
-        .active {
-          color: black;
-          
-        }
-        a:link {
-          text-decoration: none;
-        }
-        a:hover {
-          color: crimson;
-        }
+      .jumbotron {
+        background-image: url("https://i0.wp.com/pmihaylov.com/wp-content/uploads/2020/07/todocheck-logo-1.png?fit=1098%2C408&ssl=1");
+        background-repeat: no-repeat;
+        background-color: transparent;
+        background-position: 50% 50%;
+        border:none;
+        border-radius:none;
+        margin: 40px;
+        padding: 5px;
+        height:150px;
+        width: auto;
+        justify-content:center;
+      }
+      .container {
+        margin: 0 auto;
+        padding: 10px;
+      }
+      .col-lg-12 {
+        background-color:darkgrey ;
+        color: black;
+        border: 2px black solid;
+        border-radius: 10px;
+        margin: 10px;
+        height: 100px;
+        width: 50px;
+        text-align-last: center;
+      }
+      .active {
+        color:whitesmoke;
+      }
+      a:link {
+        text-decoration: none;
+      }
+      a:hover {
+        color:grey;
+      }
     </style>
   </head>
   <body>
+      
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <!-- My Body -->
+    <!-- My body -->
     <div class="jumbotron text-center"></div>
 
-    <nav class="navbar navbar-expand navbar-light bg-success">
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li>
-              <a class="active" href="#">Тoday's tasks &emsp;</a>
-              <a class="active" href="#">All tasks &emsp;</a>
-              <a class="active" href="#">Unfinished tasks &emsp;</a>
-              <a class="active" href="#">Finished tasks &emsp;</a>
-              <a class="active" href="#">Create task</a>
-            </li>
-          </ul>
-        </div>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li>
+            <a class="active" href="{% url 'today tasks' %}">Тoday's tasks &emsp;</a>
+            <a class="active" href="#">All tasks &emsp;</a>
+            <a class="active" href="#">Unfinished tasks &emsp;</a>
+            <a class="active" href="#">Finished tasks &emsp;</a>
+            <a class="active" href="#">Create task</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     {% block content %}
     {% endblock %}
+
   </body>
- 
 </html>
