--- a/templates/create_todo.html
+++ b/templates/create_todo.html
@@ -1,32 +1,29 @@
 {% extends 'base.html' %}
 {% block title %}Create new task{% endblock %}
 
-{% block content %}
-</br>
-<center><h3><b>Create new task</b></h3></center>
-    <b4-form method='POST'>
-        <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                            <div class="card">
-                                <b>Title:</b></br>{{ form.title }}
-                                <hr/>
-                                <b>Description:</b></br>{{ form.description }}
-                                <hr/>
-                                <b>Responsible:</b></br>{{ form.responsible_person }}
-                                <hr/>
-                                <b>Category:</b></br>{{ form.category }}
-                                <hr/>
-                                <b>Priority:</b></br>{{ form.priority }}
-                                <hr/>
-                                <b>Due Date:</b></br>{{ form.due_date }}
-                                <hr/>
-                                <button type="submit" class="btn btn-secondary">create</button>
-                            </div>
-                    </div>
-                </div> 
+{% block content %} 
+    <form method="POST">
+        {% csrf_token %}
+        <div class="card text-white bg-secondary mb-3" style="max-width: 40rem; margin: 0 auto; margin-top: 20px;">
+            <div class="card-header">Create new task</div>
+            <div class="card-body">
+                <div class="form-group">
+                        <b class="card-text">{{ form.title.label }}:</b>
+                        <p class="card-text">{{ form.title }}</p>
+                        <b class="card-text">{{ form.description.label }}:</b>
+                        <p class="card-text">{{ form.description }}</p>
+                        <b class="card-text">{{ form.responsible_person.label }}:</b>
+                        <p class="card-text">{{ form.responsible_person }}</p>
+                        <b class="card-text">{{ form.category.label }}:</b>
+                        <p class="card-text">{{ form.category }}</p>
+                        <b class="card-text">{{ form.priority.label }}:</b>
+                        <p class="card-text">{{ form.priority }}</p>
+                        <b class="card-text">{{ form.due_date.label }}:</b>
+                        <p class="card-text">{{ form.due_date }}</p>
+                        <b class="card-text">{{ form.state.label }}:</b>
+                        <p class="card-text">{{ form.state }}</p>
+                </div>
             </div>
         </div>
-        
-    </b4-form>
+    </form>
 {% endblock %}
